kubernetes/apps/network/envoy-gateway/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-internal-ingress
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      k8s:gateway.envoyproxy.io/owning-gateway-name: envoy-internal
      k8s:gateway.envoyproxy.io/owning-gateway-namespace: network
  ingress:
    - fromEndpoints:
        - matchLabels: {}
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - fromCIDR:
        - 10.0.0.0/8
        - fd00::/8
        - 2603:8081:5900::/48
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
